# AlgorithmicTrading

src/: Makefile  documentation.texi
src/Trading/: CMakeLists.txt  main.cc
src/Trading/Controller/: controller.cc  controller.h
src/Trading/Model/: model.cc  model.h
src/Trading/Model/Approximation/: approximation.cc  approximation.h
src/Trading/Model/Gauss/: gauss.cc  gauss.h
src/Trading/Model/InterpolationNewton/: interpolation_newton.cc  interpolation_newton.h
src/Trading/Model/InterpolationSpline/: interpolation_spline.cc  interpolation_spline.h
src/Trading/View/: mainwindow.cc  mainwindow.h  mainwindow.ui  plotwidget.cc  plotwidget.h  plotwidget.ui
